--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@vercel/examples-ui": "^0.2.6",
+    "lodash": "^4.17.21",
     "next": "^12.1.0",
     "react": "latest",
     "react-dom": "latest"
